# mbscript

./: .gitignore  CMakeLists.txt  LICENSE  README.md
includes/mbs/backend/: interpreter.h  runtime.h
includes/mbs/frontend/: ast.h  exceptions.h  lexer.h  parser.h  token.h
src/: main.cpp
src/backend/: interpreter.cpp  runtime.cpp
src/frontend/: ast.cpp  exceptions.cpp  lexer.cpp  parser.cpp  token.cpp
